# UBB-Computer-Science

./: .gitignore  README.md
PFL/P1/: 3a.pl  3b.pl~
PFL/P2/: 6a.pl~
PFL/P3/: 8.pl.txt
PFL/Practice/: 4.pl~  test.pl  test.pl~
PFL/R1/: List.py  r1a.py  r1b.py
PFL/pt2/: 11.lsip.txt  9.lisp.txt
PFL/test 2025/: test.pkt
Sem 3/Advanced Methods of Programming/a1/src/: Main.java
Sem 3/Computer Networks/Lab 1/: Client.c  Server.c  client
Sem 3/Probability and Statistics/: lab1Pb1.m  lab1Pb2.m
Year 1/Sem 1/: RESOURCES.txt
Year 1/Sem 1/Computational-Logic/Logic Project/: documentation.md  tempCodeRunnerFile.cpp
Year 1/Sem 1/FP/Test practice/: CoffeShop.py  model.py
Year 1/Sem 1/FP/a1-BorodiBogdan/: p1.py
Year 1/Sem 1/FP/a2-BorodiBogdan/: HeapSort.py
Year 1/Sem 1/FP/a4-BorodiBogdan/: MemoizationSolution.py  backtrackingSolution.py
Year 1/Sem 1/FP/exam practice/: dp 1.py  dp 2.py  dp 3.py  dp 4.py  dp 5.py  get_item.py  sparsematrix.py  test.py  test2.py
Year 1/Sem 1/FP/seminar3/: problem.py
Year 1/Sem 1/Mathematical Analysis/homework 11/: main.py  main_extra1.py  main_extra2.py
Year 1/Sem 1/Mathematical Analysis/homework10/: main.py
Year 1/Sem 1/Mathematical Analysis/seminar8HW/: hw.py
Year 1/Sem 1/assembly/: Curs Assembly UTCN.txt  course 5.txt
Year 1/Sem 1/assembly/Test practice/: C functions.txt  Errors.txt  Flags.txt  Lab 6.txt  Overflow analysis.txt
Year 1/Sem 1/assembly/courses/: course.txt
Year 1/Sem 2/Data Structures and Algorithms/SortedBag - A5/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  SortedBag.cpp  SortedBag.h  SortedBagIterator.cpp  SortedBagIterator.h
Year 1/Sem 2/Data Structures and Algorithms/fixedCapByMap/: App.cpp  ExtendedTest.cpp  FixedCapBiMap.cpp  FixedCapBiMap.h  app  command.txt
Year 1/Sem 2/Data Structures and Algorithms/priorityQueue - A3/: App  App.cpp  ExtendedTest.cpp  ShortTest.cpp  (+2 more)
Year 1/Sem 2/Graph/A5/: CMakeLists.txt  CMakePresets.json  app.cpp
Year 1/Sem 2/Graph/A5/includes/: service.h  test.h  ui.h
Year 1/Sem 2/Graph/A5/src/: service.cpp  test.cpp  ui.cpp
Year 1/Sem 2/Graph/A5/testFiles/: dijkstra.txt  maximumCostRoad.txt  minimumColouring.txt  numberOfRoads.txt  stronglyConnectedComponents.txt  test.txt
Year 1/Sem 2/OOP/QT-Practice/test model 3/: CMakeLists.txt  main.cpp
Year 1/Sem 2/OOP/QT-Practice/test model 3/domain/: domain.cpp  domain.h
Year 1/Sem 2/OOP/QT-Practice/test model 3/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Year 1/Sem 2/OOP/QT-Practice/test model 3/repository/: Repository.cpp  Repository.h
Year 1/Sem 2/OOP/QT-Practice/test model 3/service/: Service.cpp  Service.h
Year 1/Sem 2/OOP/finals/Deliver/: CMakeLists.txt  Courier.cpp  Courier.h  Observer.cpp  Observer.h  Package.cpp  Package.h  Repository.cpp  Repository.h  Service.cpp  Service.h  companyui.cpp  companyui.h  companyui.ui  gui.cpp  gui.h  gui.ui  main.cpp  plotorderswidget.cpp  plotorderswidget.h  plotorderswidget.ui  utils.cpp  utils.h
Year 1/Sem 2/OOP/lab tests/t1-BorodiBogdan-1/: CMakeLists.txt  README.md  domain.cpp  domain.h  main.cpp  repository.cpp  repository.h  service.cpp  service.h  test.cpp  test.h  ui.cpp  ui.h
Year 1/Sem 2/OOP/lab-work/oop-6-7Database/: CMakeLists.txt  diagrama.mdj
Year 1/Sem 2/OOP/lab-work/oop-a10-BorodiBogdan - No SQL database/: CMakeLists.txt
Year 1/Sem 2/OOP/lab-work/oop-a10-BorodiBogdan - No SQL database/includes/UndoRedoService/: UndoRedoService.h
Year 1/Sem 2/OOP/lab-work/oop-a10-BorodiBogdan - No SQL database/src/UndoRedoService/: UndoRedoService.cpp
Year 1/Sem 2/OOP/lab-work/oop-a10-BorodiBogdan - No SQL database/src/domain/: domain.cpp
Year 1/Sem 2/OOP/lab-work/oop-a10-BorodiBogdan - No SQL database/src/gui/: Connecter.cpp  Connecter.h  barchartwidget.cpp  barchartwidget.h  chooseconnectionmodewidget.cpp  choosemodewidget.cpp  databasewidget.cpp  databasewidget.h  mainwindow.cpp  mainwindow.h  tableView.cpp  tableView.h  userwidget.cpp  userwidget.h  watchlistwidget.cpp  watchlistwidget.h
Year 1/Sem 2/OOP/lab-work/oop-a10-BorodiBogdan - No SQL database/src/repository/: CSVRepository.cpp  HTMLRepository.cpp
Year 1/Sem 2/OOP/lab-work/oop-a10-BorodiBogdan - No SQL database/src/service/: service.cpp
Year 1/Sem 2/OOP/lab-work/oop-a10-BorodiBogdan - No SQL database/src/ui/: ui.cpp
Year 1/Sem 2/OOP/lab-work/oop-a10-BorodiBogdan - No SQL database/src/utils/: Utils.cpp
Year 1/Sem 2/OOP/lab-work/oop-a10-BorodiBogdan - No SQL database/src/validators/: MovieValidator.cpp
Year 1/Sem 2/OOP/lab-work/oop-a10-BorodiBogdan - No SQL database/tests/: test.cpp  test.h
Year 1/Sem 2/OOP/lab-work/oop-a4-5-BorodiBogdan/: CMakeLists.txt  README.md  app  compileCommand  main.cpp
Year 1/Sem 2/OOP/lab-work/oop-a4-5-BorodiBogdan/includes/domain/: domain.h
Year 1/Sem 2/OOP/lab-work/oop-a4-5-BorodiBogdan/includes/repository/: repository.h
Year 1/Sem 2/OOP/lab-work/oop-a4-5-BorodiBogdan/includes/service/: service.h
Year 1/Sem 2/OOP/lab-work/oop-a4-5-BorodiBogdan/includes/ui/: ui.h
Year 1/Sem 2/OOP/lab-work/oop-a4-5-BorodiBogdan/src/domain/: domain.cpp
Year 1/Sem 2/OOP/lab-work/oop-a4-5-BorodiBogdan/src/repository/: repository.cpp
Year 1/Sem 2/OOP/lab-work/oop-a4-5-BorodiBogdan/src/service/: service.cpp
Year 1/Sem 2/OOP/lab-work/oop-a4-5-BorodiBogdan/src/ui/: ui.cpp
Year 1/Sem 2/OOP/lab-work/oop-a4-5-BorodiBogdan/tests/: test.cpp
Year 1/Sem 2/OOP/practice/Real Estate/: CMakeLists.txt  Client.cpp  Client.h  Dwelling.cpp  Dwelling.h  RealEstateAgency.cpp  RealEstateAgency.h  main.cpp  ui.cpp  ui.h
Year 1/Sem 2/OOP/practice/Schools Manager/: CMakeLists.txt  domain.cpp  domain.h  main.cpp  repository.cpp  repository.h  service.cpp  service.h  test.cpp  test.h  ui.cpp  ui.h
Year 1/Sem 2/OOP/practice/t2-Model/: BMI.CPP  BMI.h  BP.cpp  BP.h  CMakeLists.txt  MedicalAnalysis.cpp  MedicalAnalysis.h  Person.cpp  Person.h  main.cpp  ui.cpp  ui.h
Year 1/semester 1/: RESOURCES.txt
Year 1/semester 1/Mathematical Analysis/: UTCN ANALIZA.txt
Year 1/semester 1/assembly/: course 5.txt
Year 2/Sem 3/Probability and Statistics/: lab1Pb1.m  lab1Pb2.m  test2025.m
(+1126 files in other folders)
